@@ -1,6 +1,8 @@
 ver 0.22.4 (not yet released)
 * decoder
   - dsdiff: apply padding to odd-sized chunks
+* filter
+  - ffmpeg: detect the output sample format
 * output
   - moveoutput: fix always_on and tag lost on move
 
